--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ text-decoration: none;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
+    z-index: 10;
   }
 
 .dropdown-content a {
@@ -82,4 +82,5 @@ text-decoration: none;
   
   .dropdown:hover .dropdown-content {
     display: block;
+    right: 0;
   }
